@@ -1,5 +1,8 @@
 v1.5.2.0 - 2011-03-19
 - "Assign" tag now works correctly with European (i.e. comma) decimal separators.
+- If "Assign" tag is used with a decimal (or float or double) value, and the decimal
+  separator for the current culture is ",", then the code will first try parsing
+  using "," and then fallback to the invariant culture's decimal separator (".").
 
 v1.5.1.0 - 2011-03-19
 - Filters can now access the current context. To do this, modify your filter method(s) to take
